--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
       .content {
         flex: 1;
         padding: 40px;
+        padding-bottom: 80px; /* Ensure footer does not overlap content */
       }
       .site-footer {
         width: 100vw;
