--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
         </main>
     </div>
     <footer class="site-footer">
-        <p>&copy; {{ site.time | date: '%Y' }} Sarah Young. All rights reserved. | Built on GitHub Pages with Copilot</p>
+        <p>&copy; {{ site.time | date: '%Y' }} Sarah Young. All rights reserved. | Built on GitHub Pages with a sprinkle of Copilot</p>
     </footer>
 </body>
 </html>
